--- a/frontend-client/vue-src/public/index.html
+++ b/frontend-client/vue-src/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="/jquery.js"></script>
   </head>
   <body>
     <noscript>
@@ -15,5 +15,5 @@
     <div id="app-root-container"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </html>
